# feedback-analysis-agent

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENT_README.md  CHAT_QUERY_README.md  CONTRIBUTING.md  Makefile  README.md  benchmark_embeddings.py  env.example  load_test_chat.py  package-lock.json  package.json  test_admin_ui.py  test_agent.py  test_chat_endpoint.py  test_export_api.py  test_jwt_auth.py  test_sentiment_service.py  test_text_processing.py  test_topic_detection.py  verify_setup.py
.github/workflows/: ci.yml  client-ci.yml  server-ci.yml  worker-ci.yml
client/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
client/public/: manifest.json
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/: AdminLogin.tsx  ChatPanel.tsx  Dashboard.tsx  DateRangeFilter.tsx  KPICards.tsx  Layout.tsx  TopNegativeTopics.tsx  TrendChart.tsx
client/src/components/__tests__/: KPICards.test.tsx  TrendChart.test.tsx
client/src/pages/: AdminTopicsPage.tsx  ExplorerPage.tsx  TopicDetail.tsx  TopicsPage.tsx
client/src/stores/: adminStore.ts  dashboardStore.ts  feedbackStore.ts
client/src/stores/__tests__/: dashboardStore.test.ts
client/src/test/: server.ts  setup.ts  test-utils.tsx
client/src/types/: index.ts
client/src/utils/: api.ts
deploy/: COST_COMPARISON.md  README.md  deploy.sh
deploy/fly/: README.md  fly-frontend.toml  fly.toml
deploy/railway/: README.md  docker-compose.railway.yml
deploy/render/: README.md
docs/: admin_topic_management.md  api.md  architecture.md  backup_and_export.md
infra/: Dockerfile.client  Dockerfile.server  Dockerfile.worker  README.md  docker-compose.yml
scripts/: bootstrap  bootstrap.sh  dev-setup.sh
server/: API_README.md  LOGGING_METRICS_README.md  README.md  alembic.ini  demo_logging_metrics.py  pyproject.toml  test_app.py  test_ingestion_manual.py  test_logging_metrics.py
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_add_topic_audit_log.py  003_add_text_processing_fields.py
server/app/: __init__.py  config.py  logging.py  main.py  metrics.py
server/app/agent/: __init__.py  agent.py  tools.py
server/app/api/: export.py  feedback.py  query.py  router.py  topics.py  trends.py  upload.py
server/app/jobs/: __init__.py  annotation_jobs.py  batch_processing.py  clustering_jobs.py  ingest_jobs.py  reports_jobs.py
server/app/middleware/: __init__.py  rate_limit.py  request_timing.py
server/app/models/: __init__.py  feedback.py
server/app/repositories/: __init__.py  analytics.py  base.py  feedback.py  topic.py
server/app/routers/: __init__.py  admin.py  analytics.py  chat.py  ingest.py  metrics.py
server/app/services/: auth_service.py  cache_service.py  clustering_service.py  database.py  embedding_service.py  query_service.py  queue_service.py  sentiment_service.py  text_processing_service.py  upload_service.py
server/scripts/: nightly_backup.sh  restore_backup.sh  seed_database.py
server/test_data/: sample_feedback.csv  sample_feedback.jsonl
server/tests/: conftest.py  factories.py  sample_data_fixtures.py  test_admin.py  test_api_endpoints.py  test_clustering_service.py  test_embedding_service.py  test_ingestion.py  test_queue_service.py  test_repositories.py  test_sentiment_service.py  test_text_processing_service.py
server/tests/test_data/: sample_feedback.csv  sample_feedback.jsonl
worker/: README.md  pyproject.toml  run_worker.py  worker.py
worker/app/: __init__.py  tasks.py
worker/tests/: conftest.py  test_tasks.py
