[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-customer-insights-server"
version = "0.1.0"
description = "FastAPI server for AI Customer Insights Agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "redis==5.0.1",
    "rq==1.15.1",
    "sentence-transformers>=2.7.0",
    "chromadb==0.4.18",
    "faiss-cpu>=1.9.0",
    "transformers>=4.40.0",
    "torch>=2.6.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pgvector==0.2.4",
    "pydantic-settings==2.1.0",
    "langchain==0.1.5",
    "langchain-community>=0.0.17",
    "langchain-openai==0.0.5",
    "loguru==0.7.2",
    "prometheus-client==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "factory-boy==3.3.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "faker==20.1.0",
]
nlp = [
    "fasttext-wheel==0.9.2",
    "vaderSentiment==3.3.2",
    "transformers>=4.40.0",
    "torch>=2.6.0",
    "hdbscan==0.8.33",
    "umap-learn==0.5.5",
    "scikit-learn==1.3.2",
    "yake==0.4.8",
    "nltk==3.8.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
